force-app/main/default/objects/DD_Selling_Model__c/DD_Selling_Model__c.object-meta.xml
<CustomObject>
    <description>Segment-specific configuration per product. THIS IS THE SCALABILITY LAYER. Same product can serve SB, Individual, and Large Group through different selling models.</description>
    <label>Selling Model</label>
    <nameField><displayFormat>SM-{00000}</displayFormat><label>Model ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Selling Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>