force-app/main/default/objects/DD_Selling_Model__c/fields/Available_Annual_Maxes__c.field-meta.xml
<CustomField>
    <fullName>Available_Annual_Maxes__c</fullName>
    <label>Available Annual Maximums</label>
    <type>Text</type>
    <length>255</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Comma-separated allowed values e.g. 1000,1500,2000</description>
</CustomField>