force-app/main/default/objects/DD_Selling_Model__c/fields/Available_Ortho_Maxes__c.field-meta.xml
<CustomField>
    <fullName>Available_Ortho_Maxes__c</fullName>
    <label>Available Ortho Maximums</label>
    <type>Text</type>
    <length>100</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Comma-separated: 1000,1500</description>
</CustomField>