force-app/main/default/objects/DD_Selling_Model__c/fields/Available_Ortho_Types__c.field-meta.xml
<CustomField>
    <fullName>Available_Ortho_Types__c</fullName>
    <label>Available Ortho Types</label>
    <type>Text</type>
    <length>100</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Comma-separated: Child Only,Child and Adult,Not Available</description>
</CustomField>