force-app/main/default/objects/DD_Selling_Model__c/fields/Employer_Paid_Available__c.field-meta.xml
<CustomField>
    <fullName>Employer_Paid_Available__c</fullName>
    <label>Employer Paid Available</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Offered as employer-paid</description>
</CustomField>