force-app/main/default/objects/DD_Selling_Model__c/fields/Max_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Group_Size__c</fullName>
    <label>Max Group Size</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Maximum eligible employees</description>
</CustomField>