force-app/main/default/objects/DD_Selling_Model__c/fields/Min_Contribution_Pct__c.field-meta.xml
<CustomField>
    <fullName>Min_Contribution_Pct__c</fullName>
    <label>Min Contribution Pct</label>
    <type>Percent</type>
    <precision>5</precision><scale>0</scale><required>false</required>
    <description>Minimum employer contribution percentage</description>
</CustomField>