force-app/main/default/objects/DD_Selling_Model__c/fields/Rate_Table__c.field-meta.xml
<CustomField>
    <fullName>Rate_Table__c</fullName>
    <label>Rate Table</label>
    <type>Lookup</type>
    <referenceTo>DD_Rate_Table__c</referenceTo><relationshipLabel>Selling Models</relationshipLabel><relationshipName>Selling_Models_RT</relationshipName><required>false</required>
    <description>Which rate table to use</description>
</CustomField>