force-app/main/default/objects/DD_Selling_Model__c/fields/Voluntary_Available__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_Available__c</fullName>
    <label>Voluntary Available</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Offered as voluntary</description>
</CustomField>