force-app/main/default/objects/DD_Selling_Model__c/fields/Waiting_Period_Categories__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Categories__c</fullName>
    <label>Waiting Period Categories</label>
    <type>Text</type>
    <length>200</length><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Which categories have wait: Endo,Perio,OS,Major,Ortho</description>
</CustomField>