force-app/main/default/objects/DD_Selling_Model__c/fields/Waiting_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Months__c</fullName>
    <label>Waiting Period Months</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Months of waiting period (12 for voluntary, 0 employer-paid)</description>
</CustomField>