force-app/main/default/objects/DD_Selling_Model__c/fields/Waiting_Period_Waiver_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Waiver_Allowed__c</fullName>
    <label>Waiver Allowed</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Can be waived with proof of prior coverage</description>
</CustomField>