force-app/main/default/objects/DD_Selling_Model__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Segment__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Min_Group_Size__c</columns>
    <columns>Max_Group_Size__c</columns>
</ListView>